--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require-dev": {
 	    "digbang/backoffice-template": "dev-master",
         "phpspec/phpspec": "~2.0",
-	    "illuminate/database": "4.1.*"
+	    "illuminate/database": "~4.1",
+	    "illuminate/config": "~4.1"
     },
     "license": "Proprietary",
     "authors": [
