Storing navigation menu state in a cookie to preserve it through the backoffice

--- a/bower.json
+++ b/bower.json
@@ -12,10 +12,12 @@
     "tests"
   ],
   "dependencies": {
+	"jquery": "~1.10",
     "jquery-form": "~3.46.0",
     "bootbox": "~4.2.0",
     "multiselect": "~0.9.11",
     "quicksearch": "~2.0.3",
-    "select2": "~3.4.8"
+    "select2": "~3.4.8",
+    "jquery-cookie": "~1.4.1"
   }
 }
