--- a/bower.json
+++ b/bower.json
@@ -12,12 +12,18 @@
     "tests"
   ],
   "dependencies": {
-	"jquery": "~1.10",
+    "jquery": "~1.10",
     "jquery-form": "~3.46.0",
     "bootbox": "~4.2.0",
     "multiselect": "~0.9.11",
     "quicksearch": "~2.0.3",
     "select2": "~3.4.8",
-    "jquery-cookie": "~1.4.1"
+    "jquery-cookie": "~1.4.1",
+    "font-awesome": "~4.2.0",
+    "jquery.ui": "~1.11.1",
+    "animate.less": "*",
+    "jquery-toggles": "~3.1.3",
+    "bootstrap-chosen-less-js": "~1.1.0",
+    "lato": "~0.2.0"
   }
 }
