--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "animate.less": "*",
     "jquery-toggles": "~3.1.3",
     "bootstrap-chosen-less-js": "~1.1.0",
-    "lato": "~0.2.0"
+    "lato": "~0.2.0",
+    "select2-bootstrap3-css": "~1.4.1"
   }
 }
