--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "jquery-toggles": "~3.1.3",
     "bootstrap-chosen-less-js": "~1.1.0",
     "lato": "~0.2.0",
-    "select2-bootstrap3-css": "~1.4.1"
+    "select2-bootstrap3-css": "~1.4.1",
+    "dropzone": "~3.10.2"
   }
 }
