--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 /tests              export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
-/phpspec.xml        export-ignore
+/phpspec.yml        export-ignore
 /Gruntfile.js       export-ignore
 /bower.json         export-ignore
 /package.json       export-ignore
