--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	    "way/generators":         "~2.0",
 	    "digbang/font-awesome":   "~1.0",
 	    "mustache/mustache":      "~2.4",
-	    "digbang/security":       "~1.1",
+	    "digbang/security":       "dev-master",
 	    "maatwebsite/excel":      "~1.0"
     },
     "require-dev": {
