--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "digbang/l4-backoffice",
     "description": "A set of libraries, helpers and templates for a backoffice (admin / panel) project.",
     "require": {
+        "php":                    ">=5.6",
         "illuminate/support":     "~4.2",
         "illuminate/view":        "~4.2",
         "illuminate/pagination":  "~4.2",
@@ -12,8 +13,9 @@
 	    "way/generators":         "~2.0",
 	    "digbang/font-awesome":   "~1.0",
 	    "mustache/mustache":      "~2.4",
-	    "digbang/security":       "dev-master",
-	    "maatwebsite/excel":      "~1.0"
+	    "digbang/security":       "~1.2",
+	    "maatwebsite/excel":      "~1.0",
+        "laravelba/route-binder": "~1.0"
     },
     "require-dev": {
         "laravel/framework":      "~4.2",
@@ -23,7 +25,7 @@
         "phpspec/phpspec":                   "~2.0",
         "henrikbjorn/phpspec-code-coverage": "~0.2"
     },
-    "license": "Proprietary",
+    "license": "proprietary",
     "authors": [
         {
             "name": "Guido Contreras Woda",
