--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	    "way/generators":         "~2.0",
 	    "digbang/font-awesome":   "~1.0",
 	    "mustache/mustache":      "~2.4",
-	    "digbang/security":       "~1.2",
+	    "digbang/security":       "dev-master",
 	    "maatwebsite/excel":      "~1.0",
         "laravelba/route-binder": "~1.0"
     },
