--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
 	    "way/generators":         "~2.0",
 	    "digbang/font-awesome":   "~1.0",
 	    "mustache/mustache":      "~2.4",
-	    "digbang/security":       "dev-master",
+	    "digbang/security":       "~2.0",
 	    "maatwebsite/excel":      "~1.0",
         "laravelba/route-binder": "~1.0"
     },
     "require-dev": {
-        "laravel/framework":      "~4.2",
+        "laravel/framework":                 "~4.2",
         "doctrine/common":                   "2.5.*@dev",
         "digbang/doctrine":                  "dev-laravel4",
         "digbang/backoffice-template":       "1.0.0",
