--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 	    "mustache/mustache":      "~2.4",
 	    "digbang/security":       "~2.0",
 	    "maatwebsite/excel":      "~1.0",
-        "laravelba/route-binder": "~1.0"
+        "laravelba/route-binder": "~1.0",
+        "nette/reflection": "~2.3"
     },
     "require-dev": {
         "laravel/framework":                 "~4.2",
