Changed package name to digbang/backoffice

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "l4-backoffice",
+  "name": "backoffice",
   "version": "0.1.0",
   "license": "proprietary",
   "homepage": "www.digbang.com",
