--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "l4-backoffice",
+  "name": "backoffice",
   "version": "0.1.0",
   "description": "Backoffice tools and gen.",
   "main": "assets/js/backoffice.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git.digbang.com:digbang/l4-backoffice.git"
+    "url": "git@git.digbang.com:digbang/backoffice.git"
   },
   "keywords": [
     "backoffice"
