--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "digbang/l4-backoffice",
+    "name": "lucasruroken/laravel-backoffice",
     "description": "A set of libraries, helpers and templates for a backoffice (admin / panel) project.",
     "require": {
         "php":                    ">=5.6",
@@ -11,8 +11,8 @@
 	    "illuminate/translation": "~4.2",
 	    "illuminate/validation":  "~4.2",
 	    "way/generators":         "~2.0",
-	    "digbang/font-awesome":   "~1.0",
-        "digbang/security":       "~2.1",
+	    "lucasruroken/laravel-font-awesome":   "~1.0",
+        "lucasruroken/laravel-security":       "~2.1",
         "mustache/mustache":      "~2.4",
 	    "maatwebsite/excel":      "~1.0",
         "laravelba/route-binder": "~1.0",
@@ -21,8 +21,8 @@
     "require-dev": {
         "laravel/framework":                 "~4.2",
         "doctrine/common":                   "2.5.*@dev",
-        "digbang/doctrine":                  "dev-laravel4",
-        "digbang/backoffice-template":       "1.0.0",
+        "lucasruroken/laravel-doctrine":                  "dev-laravel4",
+        "lucasruroken/laravel-backoffice-template":       "1.0.0",
         "phpspec/phpspec":                   "~2.0",
         "henrikbjorn/phpspec-code-coverage": "~0.2"
     },
@@ -39,22 +39,11 @@
 		}
 	},
 	"repositories": [
-		{
-			"type": "vcs",
-			"url": "git@git.digbang.com:digbang/font-awesome.git"
-		},
-		{
-			"type": "vcs",
-			"url": "git@git.digbang.com:digbang/backoffice-template.git"
-		},
-		{
-			"type": "vcs",
-			"url": "git@git.digbang.com:digbang/security.git"
-		},
-		{
-			"type": "vcs",
-			"url": "git@git.digbang.com:digbang/doctrine.git"
-		}
+		{ "type": "vcs", "url": "git@github.com:lucasruroken/laravel-font-awesome.git" },
+		{ "type": "vcs", "url": "git@github.com:lucasruroken/laravel-security.git" },
+		{ "type": "vcs", "url": "git@github.com:lucasruroken/laravel-doctrine.git" },
+		{ "type": "vcs", "url": "git@github.com:lucasruroken/laravel-backoffice-template.git" }
+
 	],
     "minimum-stability": "dev",
     "prefer-stable": true
